# formatof

./: .gitignore  CMakeLists.txt  README.md  TODO  main.cc  opt_gcc.cfg  opt_msvc.cfg  proj.bat  proj.sh  project.cfg
cmake/: EnableGoogleTest.cmake  LoadOptions.cmake
resources/: file_sigs.csv  file_sigs_ru.csv
src/cli/: argparse.h  main.cc  task.h  thread_pool.h
src/core/: assert.h  file.cc  file.h  format.cc  format.h  format_determiner.cc  format_determiner.h  format_list.cc  format_list.h  signature_data.h
src/gui/: dictionary.h  main_window.cc  main_window.h  main_window.ui
tests/: main.cc  test_argparse.cc
tests/resources/: 7-Zip compressed file.7z  MS Office 2007 documents.docx  MS Office 2007 documents.pptx  MS Office Open XML Format Document.xlsx
